<resources>
    <string name="app_name">DKFoodies</string>
    <string name="connection">Connexion</string>
    <string name="login">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="sign_in">Se connecter</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="email">dkfoodies@food.sn</string>
    <string name="menu">Menu</string>
    <string name="more">Voir</string>
    <string name="command">Commander</string>
    <string name="location">Localisation</string>
    <string name="help">Aide</string>
    <string name="inscription">Inscription</string>
    <string name="first_name">Nom</string>
    <string name="last_name">Prenom</string>
    <string name="num_tel">Numéro de téléphone</string>
    <string name="address">Adresse</string>
    <string name="save">Enregistrer</string>
    <string name="cancel">Annuler</string>
    <string name="order">Commander</string>
    <string name="cmd">Mes Commandes</string>
    <string name="name_of_meal">Nom du plat</string>
    <string name="success_command">Votre Commande à bien été passé Veuillez vérifier dans la rubrique mes commandes Merci </string>
    <string name="number_of_meal">Nombre de plat</string>
    <string name="accompaniments">Accompagnements</string>
    <string name="fried_potatoes">Pommes sautées</string>
    <string name="fries">Frites</string>
    <string name="potato_gratin">Gratin de pommes de terre</string>
    <string name="validate">Valider</string>
    <string name="error_field">Veuillez remplir les champs</string>
    <string name="error_connection">Veuillez vérifier votre connexion</string>
    <string name="error_parameters">Paramètres incorrects </string>
    <string name="error_inscription">Inscription échouée</string>
    <string name="success_inscription">Inscription réussie</string>
    <string name="command_error">Erreur de command</string>
    <string name="help_location">Une fois que vous etes connecter vous pouvez localiser nos restaurants si vous avez envies d\'y allez .</string>
    <string name="help_inscription">Pour Vous inscrire veuillez vous rendre à la page d\'accueil et cliquez sur le bouuton s\'inscrire , Une page va se charger ensuite pour vous Permettre de vous inscrire .  </string>
    <string name="see_command">Vous pouvez Consulter vos Commandes passées en cliquant sur la rubrique "Mes commandes" aprés etre connecté</string>
    <string name="help_connexion">Pour vous Connecter sur l\'application DKfoodies , Veuillez vous rendre à la page d\'accueil et remplir vos informations de connexion </string>
    <string name="help_command">Pour Passer une commande vous devriez d\'abord vous connecter et puis ensuite dans le menu de navigation vous selectionnez menu ensuite vous cliquer sur vos la catégorie que vous choisissez une page va se charger Pour que vous puissiez passer une commande en suivant les instructions</string>
    <string name="slogan">Bienvenue chez DkFoodies où vous trouverez les plus délicieux mets de Dakar. Que vous soyez au bureau, à la maison ou ailleurs il vous suffit d/un seul click pour y gouter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_location_fragment">LocationFragment</string>
    <string name="title_activity_localisation_fragment">LocalisationFragment</string>
    <string name="title_activity_localisation_fragrment">LocalisationFragrment</string>
</resources>