<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.quickfood.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.quickfood.MenuFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_location"
        android:name="com.example.quickfood.LocalisationFragment"
        android:label="@string/location"
        tools:layout="@layout/fragment_localisation" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.quickfood.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help" />
    <fragment
        android:id="@+id/nav_cmd"
        android:name="com.example.quickfood.MyCommandsFragment"
        android:label="@string/cmd"
        tools:layout="@layout/fragment_my_commands" />

</navigation>