<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InscriptionActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_margin="@dimen/all"
            android:layout_gravity="center"
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inscription"
            android:textStyle="bold"
            android:textSize="@dimen/title"
            android:gravity="center"
            />

        <TextView
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inscription" />

        <EditText
            android:id="@+id/txtFirstName"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:hint="@string/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/txtLastName"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:hint="@string/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/txtAddress"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:hint="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/txtNumTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/num_tel"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/login"
            android:textStyle="bold" />

        <EditText

            android:inputType="textPassword"
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/password"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSignUp"
            android:backgroundTint="@color/btnSignUp"
            android:layout_margin="15dp"
            android:text="@string/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>



</ScrollView>