<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_margin="@dimen/all"
        android:layout_gravity="center"
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:layout_margin="@dimen/all"
        android:textStyle="bold"
        android:textSize="@dimen/title"
        android:gravity="center"
        android:text="@string/connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/txtLogin"
        android:layout_marginTop="@dimen/top"
        android:hint="@string/login"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_margin="@dimen/all"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/txtPassword"
        android:gravity="center"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/top"
        android:hint="@string/password"
        android:layout_margin="@dimen/all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginTop="@dimen/top"
        android:layout_marginRight="@dimen/right"
        android:layout_gravity="center"
        android:backgroundTint="@color/btnSignIn"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/btnSignUp"
        android:backgroundTint="@color/btnSignUp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/right"
        android:layout_marginTop="80dp"
        android:text="@string/sign_up"
        android:layout_width="200dp"
        android:gravity="center"
        android:layout_height="wrap_content"/>

</LinearLayout>